@@ -1,3 +1,7 @@
+2005-03-28  Mark Mitchell <mark@codesourcery.com>
+
+	* libiberty.h (ffs): Declare, if necessary.
+	
 2005-03-27  Gabriel Dos Reis  <gdr@integreable-solutions.net>
 
 	* ternary.h: Don't use PARAMS anymore.
